--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "./index",
     
     "devDependencies":{
-        "mocha":">= 1.0.2"
+        "mocha":">= 1.0.2",
+        "canvas":">=0.11.3"
     }
 }
