--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
     "name":"jsDelaunay",
     "version":"0.0.1",
 
-    "main": "./index",
+    "main": "./lib/index",
     
     "devDependencies":{
         "mocha":">= 1.0.2",
-        "canvas":">=0.11.3"
+        "canvas":">= 0.11.3",
+        "onejs":">= 1.3.3"
+    },
+    "scripts": {
+        "test": "node bin/test"
     }
 }
